# artifactory

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
scripts/: download-artifactory-oss.sh  download-artifactory-pro.sh
sftp/: docker-compose.yaml
