[tool.poetry]
name = "artifactory"
version = "0.1.0"
description = "My studies on artifactory"
authors = ["José Nunes <josenunesra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
